# add_executable(reduce_v0_baseline reduce_v0_baseline.cu)
# target_include_directories(reduce_v0_baseline PUBLIC ${CMAKE_SOURCE_DIR} ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
# target_link_libraries(reduce_v0_baseline common nvToolsExt)
add_cuda_executable(reduce_v0_baseline reduce_v0_baseline.cu)
add_cuda_executable(reduce_v1_no_diveregence_branch reduce_v1_no_diveregence_branch.cu)
add_cuda_executable(reduce_v2_no_bank_conflict reduce_v2_no_bank_conflict.cu)
add_cuda_executable(reduce_v3_add_during_load reduce_v3_add_during_load.cu)
add_cuda_executable(reduce_v4_unroll_last_warp reduce_v4_unroll_last_warp.cu)
add_cuda_executable(reduce_v5_completely_unroll reduce_v5_completely_unroll.cu)
add_cuda_executable(reduce_v6_multi_add reduce_v6_multi_add.cu)
add_cuda_executable(reduce_v7_shuffle reduce_v7_shuffle.cu)